[project]
name = "asyncio-repl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Janek Nouvertné", email = "provinzkraut@posteo.de" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[tool.ruff]
target-version = "py39"

[tool.mypy]
strict = true
files = "asyncio_repl"
python_version = "3.9"
